# mrcepid-runassociationtesting

./: .gitignore  LICENCE  Readme.developer.md  Readme.md  dxapp.json  pyproject.toml
resources/runassociationtesting/: association_pack.py  association_resources.py  covariate_processor.py  ingest_data.py  module_loader.py  thread_utility.py
resources/runassociationtesting/burden/: __init__.py  burden_covariates.py  burden_ingester.py  burden_loader.py  burden_runner.py  load_module.py
resources/runassociationtesting/burden/tool_runners/: bolt_runner.py  glm_runner.py  regenie_runner.py  saige_runner.py  staar_runner.py  tool_runner.py
resources/runassociationtesting/extract/: extract_variants.py
resources/runassociationtesting/extract_variants/: extract_variants.py
resources/runassociationtesting/linear_model/: linear_model.py  proccess_model_output.py  staar_model.py
resources/runassociationtesting/phewas/: phewas.py
resources/runassociationtesting/tool_runners/: bolt_runner.py  glm_runner.py  regenie_runner.py  saige_runner.py  staar_runner.py
src/: mrcepid-runassociationtesting.py
src/runassociationtesting/: covariate_processor.py
test/: generate_load_parameters.py  generate_test_data.R  runassociationtesting_test.py  test.py  test_launch.py
test/test_data/: base_covar.scrambled.tsv  base_covar.tsv  covar.tsv  covar.wrong_header.tsv  exclude.txt  expected_results.json  expected_results.tsv  include.txt  pheno.first.tsv  pheno.second.tsv  pheno.tsv  pheno_covar.scrambled.tsv  pheno_covar.tsv  pheno_covar.txt  pheno_covar.wrong_header.tsv
